[gd_scene load_steps=16 format=2]

[ext_resource path="res://playerscript.gd" type="Script" id=1]
[ext_resource path="res://sprites.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 166, 306, 83, 153 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 249, 306, 83, 153 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 332, 306, 83, 153 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 415, 306, 83, 153 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 153, 83, 153 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 83, 153, 83, 153 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 415, 153, 83, 153 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 83, 153 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 83, 0, 83, 153 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 166, 0, 83, 153 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 249, 0, 83, 153 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=13]
radius = 24.0
height = 60.0

[node name="Player" type="Node2D"]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )

[node name="KinematicBody2D" type="CollisionShape2D" parent="."]
position = Vector2( 12, -16 )
shape = SubResource( 13 )
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Button1" type="Button" parent="Control"]
margin_left = 48.0
margin_top = 32.0
margin_right = 78.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( -244, -26 )
text = "R"

[node name="Button2" type="Button" parent="Control"]
margin_left = -62.0
margin_top = 32.0
margin_right = -39.0
margin_bottom = 52.0
text = "L"

[node name="Button3" type="Button" parent="Control"]
margin_left = 50.0
margin_top = -67.0
margin_right = 76.0
margin_bottom = -47.0
text = "A"

[node name="Button4" type="Button" parent="Control"]
margin_left = -59.0
margin_top = -70.0
margin_right = -35.0
margin_bottom = -50.0
text = "D"
